final few issue's with the big watch backgrounds are squashed.

--- a/CapitalTimePieces/Public/css/style.css
+++ b/CapitalTimePieces/Public/css/style.css
@@ -76,12 +76,12 @@ nav#primary ul li a.selected {background:#fff;color:#000;}
 #left-navigation ul li a {font-size:14px;font-family:InterstatePlusRegular;color:#b0b0b0;padding:5px 10px 5px 10px;display:block;text-decoration:none;text-transform:capitalize;}
 #left-navigation ul li a:hover {color:#000;}
 
-#main {z-index:10000;}
-#main.home {}
+#main {z-index:10000;background-image:url(../images/container.bg.gif); background-repeat:repeat-x; background-position:0px 70px;}
+#main.home {background:none;}
 #main.home #left-navigation {min-height:712px;}
 
 #main #content {margin-top:475px;margin-left:-10px;color:#000;background:#fff;width:700px;padding:0px 10px 10px 10px;}
-#main #product-category {padding-top:15px;color:#000;background:#000;padding-left:20px;width:720px !important;}
+#main #product-category {padding-top:15px;color:#000;padding-left:20px;width:720px !important;}
 
 footer {margin-left:240px;}
 .home footer {position:absolute;top:780px;margin:0;background:#000;color:#fff;width:700px;padding:10px;}
@@ -104,7 +104,7 @@ a.delete {display:inline;}
 
 .header {width:auto !important;margin:7px 0px 0px 250px !important;float:right;display:inline;}
 
-#brand-image{    position:absolute;    top:151px;    right:0px;	width: 100%;	background: #000;	z-index:0;}
+#brand-image{    position:absolute;    top:151px;    right:0px;	background: #000;	z-index:0;}
 #slide-container {    position:absolute;    top:151px;    left:0px;	width: 100%;	background: #000;	z-index:0;}
 #slide-container #slide {    position:relative;	width: 1600px;	height: 475px;	margin: 0 auto;}#slide-container #slide img {}
 
